modification du titre h1

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <h1>git et github deux outils developpé par linus torval createur de linux</h1>
+    <h1>git et github deux outils developpé par linus torval createur de linux un genie</h1>
     
 </body>
 </html>
