ajout du formulaire

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
 
     <h1>git et github deux outils developpé par linus torval createur de linux un genie</h1>
+    <form action="">
+        <label for="nom">nom</label>
+        <input type="text">
+    </form>
     
 </body>
 </html>
